<resources>
    <string name="app_name">Stickers2Telegram</string>
    <string name="url_hint">輸入 Line 貼圖網址</string>
    <string name="button_send">擷取</string>
    <string name="button_build">建立圖包</string>
    <string name="img_desc">貼圖</string>
    <string name="title_activity_stickers2_emojis">Stickers2Emojis</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">選擇貼圖</string>
    <string name="second_fragment_label">填入表情符號</string>
    <string name="clear_temp_btn">清除暫存</string>
    <string name="next">Next</string>
    <string name="save">儲存</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="emoji_hint">表符</string>
</resources>